--- a/words/2021-04-09-a-simple-static-site-generator-in-elixir.html
+++ b/words/2021-04-09-a-simple-static-site-generator-in-elixir.html
@@ -8,6 +8,8 @@ This week, I've built two working things in [Elixir](https://elixir-lang.org).
 
 First, there's a proxy server to assist me in developing against heavily ratelimited APIs.  It's using Phoenix, and I had it up in running from never having written a line of Elixir in about six hours (much of which was spent navigating RFCs to make sure I completely understood how HTTP and HTTPs proxies work.)
 
-Second, is the little tool I'm using to generate [this site](https://github.com/CJKinni/cjkinni.github.io), [CJKinni/BlogEngine](https://github.com/CJKinni/BlogEngine).  It's basically a MVP static-site generator.  That is, it takes a folder of [Markdown](https://daringfireball.net/projects/markdown/) formatted documents and spits out a table of context and some nicely formatted blog posts.  Eventually I'll add an Atom feed, and maybe some other nice features.  This was an evening project today, and it took about two hours while watching TV with Laura.  It's _very_ janky, but it's also _very_ simple, which I like.
+Second, is the [little tool](https://github.com/CJKinni/BlogEngine) I'm using to generate [this site](https://github.com/CJKinni/cjkinni.github.io).  It's basically a MVP static-site generator.  That is, it takes a folder of [Markdown](https://daringfireball.net/projects/markdown/) formatted documents and spits out a table of context and some nicely formatted blog posts.  Eventually I'll add an Atom feed, and maybe some other nice features.  This was an evening project today, and it took about two hours while watching TV with Laura.  It's _very_ janky, but it's also _very_ simple, which I like.
+
+It basically consists of 
 
 I enjoyed writing the code.  I'm still not sure what the result of my deep dive into category theory will be, but for now I'm enjoying the ride.
