New Update (Automated)

--- a/words/2021-04-11-funtional-adventures-i.html
+++ b/words/2021-04-11-funtional-adventures-i.html
@@ -1,5 +1,6 @@
 title: Functional Adventures I
 date: 2021-04-11
+draft: true
 ---
 
 [Category Theory for Programmers PDF](https://github.com/hmemcpy/milewski-ctfp-pdf)
@@ -9,3 +10,4 @@ date: 2021-04-11
 [Category Theory for Programmers - Lecture Playlist](https://www.youtube.com/watch?v=I8LbkfSSR58&list=PLbgaMIhjbmEnaH_LTkxLI7FMa2HsnawM_)
 
 [LambdaCast](https://soundcloud.com/lambda-cast)
+
