New Update (Automated)

--- a/words/2021-04-24-one-year-of-this-website-will-selfdestruct.html
+++ b/words/2021-04-24-one-year-of-this-website-will-selfdestruct.html
@@ -6,7 +6,7 @@ It's been one year since [ThisWebsiteWillSelfDestruct.com](https://www.thiswebsi
 
 ## Stats
 
-- Since the site's still up, it by definition ahs had at least one new message every 24 hours for the past 365 days.
+- Since the site's still up, it by definition has had at least one new message every 24 hours for the past 365 days.
 - It's actually had many more.  It's received 200,856 messages in the past year.
 - In its first month, it received just over 150,000 messages.  Since then, it's been a slow and steady.
 - Those message counts do not include unwanted, filtered messages.
@@ -23,11 +23,11 @@ While I was out doing errands, I noticed that there were even more people postin
 
 Then I didn't think about it until my phone started getting downtime messages.  After looking into it, I was getting _a lot_ of traffic.  It was coming from [a popular Reddit post](https://www.reddit.com/r/InternetIsBeautiful/comments/g56vxk/this_website_will_selfdestruct_if_it_goes_24/).
 
-Without that post, I don't think the website would be alive today.  It both showed off the site to tons of people, and it also forced me to take the site's archetecture, content, and moderation policies far more seriously.
+Without that post, I don't think the website would be alive today.  It both showed off the site to tons of people, and it also forced me to take the site's architecture, content, and moderation policies far more seriously.
 
 ## Architecture
 
-The site was built with Rails and Vue.js.  It is essentially just a webform with a couple APIs.  There are three activities most people were able to do with the original site:
+The site was built with Rails and Vue.js.  It is essentially just a web form with a couple APIs.  There are three activities most people were able to do with the original site:
 
 - Read a random message.
 - Post a message.
@@ -68,19 +68,19 @@ The process worked like this:  I would manually read every post that came into t
 
 Then I'd update the code to add the filter, and move on.
 
-After doing this process for about a day, the number of problematic posts was vanishingly small.  It's almost certain some positive posts are also filtered out in the process, but I've tried my best to limit that when possible.  Fortunately, it's impossible for anyone to know if their post has been filtered, so bad actors don't have a quick way to figure out how to work around the filter, and well intentioned and incorrectly filtered users don't have a bad experience when they post their message.
+After doing this process for about a day, the number of problematic posts was vanishingly small.  It's almost certain some positive posts are also filtered out in the process, but I've tried my best to limit that when possible.  Fortunately, it's impossible for anyone to know if their post has been filtered, so bad actors don't have a quick way to figure out how to work around the filter, and well-intentioned and incorrectly filtered users don't have a bad experience when they post their message.
 
 One side note that I have to mention here -- I had to write a separate filter for long messages because _a lot_ of people posted the full script of the Bee Movie.  It was everywhere.  Eventually, I would also filter non-unique messages.  But I do think it was entertaining how severely the long text of the Bee movie script would break the style of the website.  For a short time, a few hours into reddit, after filtering out a lot of the hate speech, the site was made up of real content and bee movie scripts, in equal parts.
 
 ### Terrorist Threats
 
-After a night without sleep, and content mostly moderating itself, I finally went to bed.  When I woke up, a person reported a problem: There was a trending reddit post in a local American city about a possible threat to a mall that was posted through ThisWebsiteWillSelfDestruct.com.  The title of the website made the threat all the more sinsiter.  People were concerned, and a few mentioned calling the local police, and said that the police were investigating.
+After a night without sleep, and content mostly moderating itself, I finally went to bed.  When I woke up, a person reported a problem: There was a trending reddit post in a local American city about a possible threat to a mall that was posted through ThisWebsiteWillSelfDestruct.com.  The title of the website made the threat all the more sinister.  People were concerned, and a few mentioned calling the local police, and said that the police were investigating.
 
 I like to be up front when it comes to this kind of thing, and called the police myself, and explained the situation.  We had a nice chat, and I gave them all the (limited) information I could.  Nothing came of the threat, but I think it's worth mentioning as an unexpected experience that came from the site.
 
 # A wild year
 
-The filtering has mostly worked for the past year with only minor imporvements.  I'm always keeping an eye on things, but I've been blown away by the supportiveness of the community.
+The filtering has mostly worked for the past year with only minor improvements.  I'm always keeping an eye on things, but I've been blown away by the supportiveness of the community.
 
 It's been awesome reading the things that are posted to the site, and I thank everyone who's been a part of it.
 
